--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,7 @@
 {
-    "name": "typo3/demo-t3SphinxThemeRtd",
+    "name": "typo3/sphinx_typo3_theme_rendering_test",
     "type": "typo3-cms-documentation",
-    "description": "Examples for formatting text for the t3SphinxThemeRtd used in the official TYPO3 documentation",
+    "description": "A test suite for the sphinx_typo3_theme",
     "license": "OPL-1.0",
     "require": {
       "typo3/cms-core": "^9.5"
