--- a/Documentation/Settings.cfg
+++ b/Documentation/Settings.cfg
@@ -22,13 +22,13 @@
 ; endless list of all of the general simple settings
 ; you can use in 'conf.py'
 
-project     = t3SphinxThemeRtd Demo Docs
+project     = Sphinx TYPO3 Theme Rendering Test
 version     = 1.0
 release     = 1.0.0
 t3author    = My Authorname
 copyright   = since 1970 by My Authorname
 
-description = Examples for formatting text for the t3SphinxThemeRtd used in the official TYPO3 documentation
+description = Examples for formatting text for the sphinx_typo3_theme of the official TYPO3 documentation
 
 plantuml_latex_output_format = eps
 
@@ -46,14 +46,14 @@ plantuml_latex_output_format = eps
 
 github_branch        = master
 github_commit_hash   =
-github_repository    = TYPO3-Documentation/t3SphinxThemeRtdDemoDocs
+github_repository    = TYPO3-Documentation/sphinx_typo3_theme_rendering_test
 github_revision_msg  =
 github_sphinx_locale =
 project_contact      =
 project_discussions  =
-project_home         = https://github.com/TYPO3-Documentation/t3SphinxThemeRtdDemoDocs
-project_issues       = https://github.com/TYPO3-Documentation/t3SphinxThemeRtdDemoDocs/issues
-project_repository   = https://github.com/TYPO3-Documentation/t3SphinxThemeRtdDemoDocs
+project_home         = https://github.com/TYPO3-Documentation/sphinx_typo3_theme_rendering_test
+project_issues       = https://github.com/TYPO3-Documentation/sphinx_typo3_theme_rendering_test/issues
+project_repository   = https://github.com/TYPO3-Documentation/sphinx_typo3_theme_rendering_test
 use_opensearch       =
 
 
