--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -87,16 +87,12 @@ jobs:
           if [[ "${{ matrix.mode }}" = "online" ]]; then
               echo '{"Overrides_cfg":{"html_theme_options":{"docstypo3org":"nonempty"}}}' > Documentation-GENERATED-temp/jobfile.json
           fi
-      - run: mkdir -p tmp-GENERATED-Wheels
-      - run: wget https://github.com/TYPO3-Documentation/sphinx_typo3_theme/suites/4189465675/artifacts/107977222
-                  --output-document=tmp-GENERATED-Wheels/bdist-wheel-package.zip
-      - run: unzip tmp-GENERATED-Wheels/bdist-wheel-package.zip -d tmp-GENERATED-Wheels
       - name: docker run
         run: |
           docker run --rm --user=$(id -u):$(id -g) \
             -v $(pwd):/PROJECT:ro \
             -v $(pwd)/Documentation-GENERATED-temp:/RESULT \
-            -v $(pwd)/tmp-GENERATED-Wheels:/WHEELS \
+            -v $(pwd)/Documentation-Wheels:/WHEELS \
             ghcr.io/t3docs/render-documentation:develop makehtml-no-cache \
               -c make_singlehtml 0 \
               -c jobfile /RESULT/jobfile.json
