--- a/Documentation/Settings.cfg
+++ b/Documentation/Settings.cfg
@@ -82,3 +82,28 @@ t3tsref       = https://docs.typo3.org/m/typo3/reference-typoscript/master/en-us
 # t3tssyntax    = https://docs.typo3.org/typo3cms/TyposcriptSyntaxReference/
 
 sphinxdoc = https://www.sphinx-doc.org/en/master
+
+
+[extlinks]
+#
+# ; These defaults are set in conf.py
+#
+# ; Example:
+# ;    :forge:`12345` will be rendered as
+# ;    <a href="https://forge.typo3.org/issues/12345">forge:12345</a>
+#
+# ; name = url | prefix
+#
+forge      = https://forge.typo3.org/issues/%s         | forge:
+review     = https://review.typo3.org/%s               | review:
+issue      = https://forge.typo3.org/issues/%s"        | Issue #
+t3ext      = https://extensions.typo3.org/extension/%s | t3ext:
+t3ext1     = https://extensions.typo3.org/extension/%s | ↗t3ext:
+t3ext2     = https://extensions.typo3.org/extension/%s | t3ext↗:
+t3ext3     = https://extensions.typo3.org/extension/%s | t3ext↗
+t3ext4     = https://extensions.typo3.org/extension/%s | t3ext:↗
+packagist  = https://packagist.org/packages/%s         | pckg:
+packagist1 = https://packagist.org/packages/%s         | ↗pckg:
+packagist2 = https://packagist.org/packages/%s         | pckg↗:
+packagist3 = https://packagist.org/packages/%s         | pckg↗
+packagist4 = https://packagist.org/packages/%s         | pckg:↗
