--- a/Documentation/Settings.cfg
+++ b/Documentation/Settings.cfg
@@ -96,7 +96,7 @@ sphinxdoc = https://www.sphinx-doc.org/en/master
 #
 forge      = https://forge.typo3.org/issues/%s         | forge:
 review     = https://review.typo3.org/%s               | review:
-issue      = https://forge.typo3.org/issues/%s"        | Issue #
+issue      = https://forge.typo3.org/issues/%s"        | issue #
 t3ext      = https://extensions.typo3.org/extension/%s | t3ext:
 t3ext1     = https://extensions.typo3.org/extension/%s | ↗t3ext:
 t3ext2     = https://extensions.typo3.org/extension/%s | t3ext↗:
@@ -107,3 +107,4 @@ packagist1 = https://packagist.org/packages/%s         | ↗pckg:
 packagist2 = https://packagist.org/packages/%s         | pckg↗:
 packagist3 = https://packagist.org/packages/%s         | pckg↗
 packagist4 = https://packagist.org/packages/%s         | pckg:↗
+theme-issue = https://github.com/TYPO3-Documentation/sphinx_typo3_theme/issues/%s | issue #
