Update Settings.cfg, Replacements

--- a/Documentation/Settings.cfg
+++ b/Documentation/Settings.cfg
@@ -22,13 +22,21 @@
 ; endless list of all of the general simple settings
 ; you can use in 'conf.py'
 
+audience    = TYPO3 documentation editors and developers
+author      = Martin Bless <martin.bless@mbless.de>
+copyright   = 2020 by the TYPO3 Documentation Team
+description = This project contains examples of documentation code in
+   reStructuredText format. The purpose is to demonstrate what the
+   sphinx_typo3_theme can handle and to test the theme.
+language    = en
+license     = CC-BY 4.0 <https://creativecommons.org/licenses/by/4.0/>
+maintainer  = Martin Bless <martin.bless@mbless.de>
 project     = Sphinx TYPO3 Theme Rendering Test
-version     = 1.0
-release     = 1.0.0
-t3author    = My Authorname
-copyright   = since 1970 by My Authorname
+published   = https://typo3-documentation.github.io/sphinx_typo3_theme_rendering_test/
+release     = main
+version     = main
 
-description = Examples for formatting text for the sphinx_typo3_theme of the official TYPO3 documentation
+
 
 plantuml_latex_output_format = eps
 
@@ -42,7 +50,7 @@ plantuml_latex_output_format = eps
 
 [html_theme_options]
 
-; for theme t3SphinxThemeRtd
+; for sphinx_typo3_theme, t3SphinxThemeRtd
 
 github_branch        = master
 github_commit_hash   =
