Update Settings.cfg, Replacements

--- a/Documentation/Settings.cfg
+++ b/Documentation/Settings.cfg
@@ -22,50 +22,55 @@
 ; endless list of all of the general simple settings
 ; you can use in 'conf.py'
 
-audience    = TYPO3 documentation editors and developers
 author      = Martin Bless <martin.bless@mbless.de>
-copyright   = 2020 by the TYPO3 Documentation Team
-description = This project contains examples of documentation code in
-   reStructuredText format. The purpose is to demonstrate what the
-   sphinx_typo3_theme can handle and to test the theme.
+copyright   = 2020, TYPO3 Documentation Team
 language    = en
-license     = CC-BY 4.0 <https://creativecommons.org/licenses/by/4.0/>
-maintainer  = Martin Bless <martin.bless@mbless.de>
 project     = Sphinx TYPO3 Theme Rendering Test
-published   = https://typo3-documentation.github.io/sphinx_typo3_theme_rendering_test/
 release     = main
 version     = main
-
-
 
 plantuml_latex_output_format = eps
 
 
 # mathjax_path = https://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML
 
-
 # For a reference about this file see:
 # https://github.com/marble/typo3-docs-typo3-org-resources/blob/master/userroot/scripts/bin/conf-2015-10.Reference.Settings.cfg
 
+[docstypo3-meta]
 
-[html_theme_options]
+# will go to {'conf_py': {'docstypo3': {'meta':{key: value, ...}}}
+
+audience    = TYPO3 documentation editors and developers
+description =
+   This project contains examples of documentation code in
+   reStructuredText format. The purpose is to demonstrate what the
+   sphinx_typo3_theme can handle and to test the theme.
+doctype     = Example documentation, Test documentation
+language    = English
+license     = CC-BY 4.0 <https://creativecommons.org/licenses/by/4.0/>
+maintainer  = Martin Bless <martin.bless@mbless.de>
+published   = https://typo3-documentation.github.io/sphinx_typo3_theme_rendering_test/
+
+
+[html-theme-options]
 
 ; for sphinx_typo3_theme, t3SphinxThemeRtd
 
 github_branch        = master
-github_commit_hash   =
+github_commit_hash   = deprecated
 github_repository    = TYPO3-Documentation/sphinx_typo3_theme_rendering_test
-github_revision_msg  =
-github_sphinx_locale =
-project_contact      =
-project_discussions  =
+github_revision_msg  = deprecated
+github_sphinx_locale = deprecated
+project_contact      = https://typo3.org/community/teams/documentation
+project_discussions  = https://github.com/TYPO3-Documentation/sphinx_typo3_theme_rendering_test/discussions
 project_home         = https://github.com/TYPO3-Documentation/sphinx_typo3_theme_rendering_test
 project_issues       = https://github.com/TYPO3-Documentation/sphinx_typo3_theme_rendering_test/issues
 project_repository   = https://github.com/TYPO3-Documentation/sphinx_typo3_theme_rendering_test
-use_opensearch       =
+use_opensearch       = ((is currently disabled))
 
 
-[intersphinx_mapping]
+[intersphinx-mapping]
 
 ; uncomment only what you actually use:
 
