--- a/Documentation/Settings.cfg
+++ b/Documentation/Settings.cfg
@@ -22,12 +22,12 @@
 ; endless list of all of the general simple settings
 ; you can use in 'conf.py'
 
-author      = Martin Bless <martin.bless@mbless.de>
-copyright   = 2020, TYPO3 Documentation Team
-language    = en
-project     = Sphinx TYPO3 Theme Rendering Test
-release     = main
-version     = main
+author    = TYPO3 Documentation Team
+copyright = 2020, TYPO3 Documentation Team
+language  = en
+project   = Sphinx TYPO3 Theme Rendering Test
+release   = main
+version   = main
 
 plantuml_latex_output_format = eps
 
@@ -41,12 +41,19 @@ plantuml_latex_output_format = eps
 
 # will go to {'conf_py': {'docstypo3': {'meta':{key: value, ...}}}
 
-audience    = TYPO3 documentation editors and developers
-description =
-   This project contains examples of documentation code in
+audience    = Developers and editors of TYPO3 documentation
+description = This project
+   demonstrates how reStructuredText markup looks like when
+   rendered with the 'sphinx_typo3_theme'. The focus is on technical aspects
+   and behaviour. It is used for theme testing. Everything in here
+   "should work".
+
+   NOTE: This project DOES NOT show TYPO3 best practices.
+   is The purpose  examples of documentation code in
    reStructuredText format. The purpose is to demonstrate what the
    sphinx_typo3_theme can handle and to test the theme.
-doctype     = Example documentation, Test documentation
+
+doctype     = Technical rendering test example
 language    = English
 license     = CC-BY 4.0 <https://creativecommons.org/licenses/by/4.0/>
 maintainer  = Martin Bless <martin.bless@mbless.de>
