--- a/Documentation/Settings.cfg
+++ b/Documentation/Settings.cfg
@@ -39,74 +39,108 @@ plantuml_latex_output_format = eps
 
 [docstypo3-meta]
 
-# will go to {'conf_py': {'docstypo3': {'meta':{key: value, ...}}}
+# Will go to {'conf_py': {'docstypo3': {'meta':{key: value, ...}}}
+# Access in replacements as |dt3m_audience|, |dt3m_description|, …
 
 audience    = Developers and editors of TYPO3 documentation
 description = This project
-   demonstrates how reStructuredText markup looks like when
-   rendered with the 'sphinx_typo3_theme'. The focus is on technical aspects
-   and behaviour. It is used for theme testing. Everything in here
-   "should work".
+   demonstrates how [reStructuredText markup](https://docutils.sourceforge.io/rst.html)
+   looks like when rendered with the
+   [sphinx_typo3_theme](https://github.com/TYPO3-Documentation/sphinx_typo3_theme).
+   The focus is on technical aspects and behaviour. It is used for theme
+   testing. Everything in here "should work".
 
-   NOTE: This project DOES NOT show TYPO3 best practices.
-   is The purpose  examples of documentation code in
-   reStructuredText format. The purpose is to demonstrate what the
-   sphinx_typo3_theme can handle and to test the theme.
+   NOTE: This project DOES NOT show TYPO3 best practices. The purpose is
+   (a) to demonstrate what the theme can handle and
+   (b) to serve as a test for the theme.
 
 doctype     = Technical rendering test example
-language    = English
-license     = CC-BY 4.0 <https://creativecommons.org/licenses/by/4.0/>
+language    = English (us)
+license     = CC-BY 4.0 (https://creativecommons.org/licenses/by/4.0/)
 maintainer  = Martin Bless <martin.bless@mbless.de>
-published   = https://typo3-documentation.github.io/sphinx_typo3_theme_rendering_test/
+website     = Read online (https://typo3-documentation.github.io/sphinx_typo3_theme_rendering_test/)
 
 
 [html-theme-options]
 
 ; for sphinx_typo3_theme, t3SphinxThemeRtd
 
-github_branch        = master
-github_commit_hash   = deprecated
-github_repository    = TYPO3-Documentation/sphinx_typo3_theme_rendering_test
-github_revision_msg  = deprecated
-github_sphinx_locale = deprecated
+# Link buttons in the footer
 project_contact      = https://typo3.org/community/teams/documentation
 project_discussions  = https://github.com/TYPO3-Documentation/sphinx_typo3_theme_rendering_test/discussions
 project_home         = https://github.com/TYPO3-Documentation/sphinx_typo3_theme_rendering_test
 project_issues       = https://github.com/TYPO3-Documentation/sphinx_typo3_theme_rendering_test/issues
 project_repository   = https://github.com/TYPO3-Documentation/sphinx_typo3_theme_rendering_test
-use_opensearch       = ((is currently disabled))
+
+
+# Opensearch code is currently disabled
+use_opensearch =
+
+
+# Edit on GitHub button
+github_host = github.com
+github_user = TYPO3-Documentation
+github_repo = sphinx_typo3_theme_rendering_test
+github_version = main
+
+# Edit on BitBucket button
+bitbucket_host = bitbucket.org
+bitbucket_user =
+bitbucket_repo =
+bitbucket_version =
+
+# Edit on GitLab button
+gitlab_host = gitlab.com
+gitlab_user =
+gitlab_repo =
+gitlab_version =
+
+# DEPRECATED settings - don't use these any more
+github_branch        = main
+github_commit_hash   = ((was never implemented))
+github_repository    = TYPO3-Documentation/sphinx_typo3_theme_rendering_test
+github_revision_msg  = ((was never implemented))
+github_sphinx_locale = ((was never implemented))
 
 
 [intersphinx-mapping]
 
 ; uncomment only what you actually use:
 
-# t3api         = https://typo3.org/api/typo3cms/
-# t3cgl         = https://docs.typo3.org/typo3cms/CodingGuidelinesReference/
-# t3coreapi     = https://docs.typo3.org/typo3cms/CoreApiReference/
-# t3editors     = https://docs.typo3.org/typo3cms/EditorsTutorial/
-# t3extbasebook = https://docs.typo3.org/typo3cms/ExtbaseFluidBook/
-# t3fal         = https://docs.typo3.org/typo3cms/FileAbstractionLayerReference/
-# t3inside      = https://docs.typo3.org/typo3cms/InsideTypo3Reference/
-# t3install     = https://docs.typo3.org/typo3cms/InstallationGuide/
-# t3l10n        = https://docs.typo3.org/typo3cms/FrontendLocalizationGuide/
-# t3security    = https://docs.typo3.org/typo3cms/SecurityGuide/
-# t3services    = https://docs.typo3.org/typo3cms/Typo3ServicesReference/
-# t3skinning    = https://docs.typo3.org/typo3cms/SkinningReference/
-# t3start       = https://docs.typo3.org/typo3cms/GettingStartedTutorial/
-# t3tca         = https://docs.typo3.org/typo3cms/TCAReference/
-# t3templating  = https://docs.typo3.org/typo3cms/TemplatingTutorial/
-# t3ts45        = https://docs.typo3.org/typo3cms/TyposcriptIn45MinutesTutorial/
-t3tsconfig    = https://docs.typo3.org/m/typo3/reference-tsconfig/master/en-us/
-t3tsref       = https://docs.typo3.org/m/typo3/reference-typoscript/master/en-us/
-# t3tssyntax    = https://docs.typo3.org/typo3cms/TyposcriptSyntaxReference/
 
-sphinxdoc = https://www.sphinx-doc.org/en/master
+# Official manuals
+#
+# h2document     = https://docs.typo3.org/m/typo3/docs-how-to-document/main/en-us/
+# t3contribute   = https://docs.typo3.org/m/typo3/guide-contributionworkflow/main/en-us/
+# t3coreapi      = https://docs.typo3.org/m/typo3/reference-coreapi/main/en-us/
+# t3docteam      = https://docs.typo3.org/m/typo3/team-t3docteam/main/en-us/
+# t3editors      = https://docs.typo3.org/m/typo3/tutorial-editors/main/en-us/
+# t3extbase      = https://docs.typo3.org/m/typo3/guide-extbasefluid/main/en-us/
+# t3extbasebook  = https://docs.typo3.org/m/typo3/book-extbasefluid/main/en-us/
+# t3install      = https://docs.typo3.org/m/typo3/guide-installation/main/en-us/
+# t3l10n         = https://docs.typo3.org/m/typo3/guide-frontendlocalization/main/en-us/
+# t3sitepackage  = https://docs.typo3.org/m/typo3/tutorial-sitepackage/main/en-us/
+# t3start        = https://docs.typo3.org/m/typo3/tutorial-getting-started/main/en-us/
+# t3tca          = https://docs.typo3.org/m/typo3/reference-tca/main/en-us/
+# t3templating   = https://docs.typo3.org/m/typo3/tutorial-templating/main/en-us/
+# t3ts45         = https://docs.typo3.org/m/typo3/tutorial-typoscript-in-45-minutes/main/en-us/
+# t3tsconfig     = https://docs.typo3.org/m/typo3/reference-tsconfig/main/en-us/
+# t3tsref        = https://docs.typo3.org/m/typo3/reference-typoscript/main/en-us/
+# t3vhref        = https://docs.typo3.org/other/typo3/view-helper-reference/main/en-us/
+
+# system extensions
+#
+# ckedit  = https://docs.typo3.org/c/typo3/cms-rte-ckeditor/main/en-us/
+# t3core  = https://docs.typo3.org/c/typo3/cms-core/main/en-us/
+# form    = https://docs.typo3.org/c/typo3/cms-form/main/en-us/
+# fsc     = https://docs.typo3.org/c/typo3/cms-fluid-styled-content/main/en-us/
+# sched   = https://docs.typo3.org/c/typo3/cms-scheduler/main/en-us/
+
+# Custom for this project
+#sphinxdoc = https://www.sphinx-doc.org/en/master
 
 
 [extlinks]
-#
-# ; These defaults are set in conf.py
 #
 # ; Example:
 # ;    :forge:`12345` will be rendered as
@@ -114,17 +148,9 @@ sphinxdoc = https://www.sphinx-doc.org/en/master
 #
 # ; name = url | prefix
 #
-forge      = https://forge.typo3.org/issues/%s         | forge:
-review     = https://review.typo3.org/%s               | review:
-issue      = https://forge.typo3.org/issues/%s"        | issue #
-t3ext      = https://extensions.typo3.org/extension/%s | t3ext:
-t3ext1     = https://extensions.typo3.org/extension/%s | ↗t3ext:
-t3ext2     = https://extensions.typo3.org/extension/%s | t3ext↗:
-t3ext3     = https://extensions.typo3.org/extension/%s | t3ext↗
-t3ext4     = https://extensions.typo3.org/extension/%s | t3ext:↗
-packagist  = https://packagist.org/packages/%s         | pckg:
-packagist1 = https://packagist.org/packages/%s         | ↗pckg:
-packagist2 = https://packagist.org/packages/%s         | pckg↗:
-packagist3 = https://packagist.org/packages/%s         | pckg↗
-packagist4 = https://packagist.org/packages/%s         | pckg:↗
-theme-issue = https://github.com/TYPO3-Documentation/sphinx_typo3_theme/issues/%s | issue #
+forge       = https://forge.typo3.org/issues/%s         | forge:
+issue       = https://forge.typo3.org/issues/%s"        | forge issue #
+packagist   = https://packagist.org/packages/%s         | pckg↗
+review      = https://review.typo3.org/%s               | review:
+t3ext       = https://extensions.typo3.org/extension/%s | t3ext↗
+theme-issue = https://github.com/TYPO3-Documentation/sphinx_typo3_theme/issues/%s | theme issue #
