--- a/Documentation/Settings.cfg
+++ b/Documentation/Settings.cfg
@@ -149,8 +149,13 @@ github_sphinx_locale = ((was never implemented))
 # ; name = url | prefix
 #
 forge       = https://forge.typo3.org/issues/%s         | forge:
-issue       = https://forge.typo3.org/issues/%s"        | forge issue #
+issue       = https://forge.typo3.org/issues/%s"        | forge:
 packagist   = https://packagist.org/packages/%s         | pckg↗
+packagist3  = https://packagist.org/packages/%s         | pckg:
+packagist4  = https://packagist.org/packages/%s         | PCKG:
 review      = https://review.typo3.org/%s               | review:
 t3ext       = https://extensions.typo3.org/extension/%s | t3ext↗
+t3ext2      = https://extensions.typo3.org/extension/%s | ext↗
+t3ext3      = https://extensions.typo3.org/extension/%s | ext:
+t3ext4      = https://extensions.typo3.org/extension/%s | EXT:
 theme-issue = https://github.com/TYPO3-Documentation/sphinx_typo3_theme/issues/%s | theme issue #
