--- a/Documentation/Settings.cfg
+++ b/Documentation/Settings.cfg
@@ -98,7 +98,7 @@ gitlab_version =
 # DEPRECATED settings - don't use these any more
 github_branch        = main
 github_commit_hash   = ((was never implemented))
-github_repository    = TYPO3-Documentation/sphinx_typo3_theme_rendering_test
+github_repository    =
 github_revision_msg  = ((was never implemented))
 github_sphinx_locale = ((was never implemented))
 
