--- a/Documentation/Settings.cfg
+++ b/Documentation/Settings.cfg
@@ -149,6 +149,9 @@ github_sphinx_locale = ((was never implemented))
 # ; name = url | prefix
 #
 forge       = https://forge.typo3.org/issues/%s         | forge:
+forge2      = https://forge.typo3.org/issues/%s         | forge#
+forge3      = https://forge.typo3.org/issues/%s         | forge↗#
+forge4      = https://forge.typo3.org/issues/%s         | forge:#
 issue       = https://forge.typo3.org/issues/%s"        | forge:
 packagist   = https://packagist.org/packages/%s         | pckg↗
 packagist3  = https://packagist.org/packages/%s         | pckg:
