--- a/Documentation/Settings.cfg
+++ b/Documentation/Settings.cfg
@@ -96,7 +96,7 @@ gitlab_repo =
 gitlab_version =
 
 # DEPRECATED settings - don't use these any more
-github_branch        = main
+github_branch        =
 github_commit_hash   = ((was never implemented))
 github_repository    =
 github_revision_msg  = ((was never implemented))
@@ -156,6 +156,7 @@ issue       = https://forge.typo3.org/issues/%s"        | forge:
 packagist   = https://packagist.org/packages/%s         | pckg↗
 packagist3  = https://packagist.org/packages/%s         | pckg:
 packagist4  = https://packagist.org/packages/%s         | PCKG:
+packagist5  = https://packagist.org/packages/%s         | PACKAGIST:
 review      = https://review.typo3.org/%s               | review:
 t3ext       = https://extensions.typo3.org/extension/%s | t3ext↗
 t3ext2      = https://extensions.typo3.org/extension/%s | ext↗
