--- a/Documentation/Settings.cfg
+++ b/Documentation/Settings.cfg
@@ -78,18 +78,21 @@ use_opensearch =
 
 
 # Edit on GitHub button
+edit_github = 1
 github_host = github.com
 github_user = TYPO3-Documentation
 github_repo = sphinx_typo3_theme_rendering_test
-github_version = main
+github_version = master
 
 # Edit on BitBucket button
+edit_bitbucket =
 bitbucket_host = bitbucket.org
 bitbucket_user =
 bitbucket_repo =
 bitbucket_version =
 
 # Edit on GitLab button
+edit_gitlab =
 gitlab_host = gitlab.com
 gitlab_user =
 gitlab_repo =
@@ -148,18 +151,12 @@ github_sphinx_locale = ((was never implemented))
 #
 # ; name = url | prefix
 #
-forge       = https://forge.typo3.org/issues/%s         | forge:
-forge2      = https://forge.typo3.org/issues/%s         | forge#
-forge3      = https://forge.typo3.org/issues/%s         | forge↗#
-forge4      = https://forge.typo3.org/issues/%s         | forge:#
-issue       = https://forge.typo3.org/issues/%s"        | forge:
-packagist   = https://packagist.org/packages/%s         | pckg↗
-packagist3  = https://packagist.org/packages/%s         | pckg:
-packagist4  = https://packagist.org/packages/%s         | PCKG:
-packagist5  = https://packagist.org/packages/%s         | PACKAGIST:
+forge       = https://forge.typo3.org/issues/%s         | forge#
+issue       = https://forge.typo3.org/issues/%s"        | forge#
+packagist   = https://packagist.org/packages/%s         |
 review      = https://review.typo3.org/%s               | review:
-t3ext       = https://extensions.typo3.org/extension/%s | t3ext↗
-t3ext2      = https://extensions.typo3.org/extension/%s | ext↗
-t3ext3      = https://extensions.typo3.org/extension/%s | ext:
-t3ext4      = https://extensions.typo3.org/extension/%s | EXT:
-theme-issue = https://github.com/TYPO3-Documentation/sphinx_typo3_theme/issues/%s | theme issue #
+t3ext       = https://extensions.typo3.org/extension/%s | EXT:
+theme-issue = https://github.com/TYPO3-Documentation/sphinx_typo3_theme/issues/%s | theme#
+example1    = https://example.org/%s                    | example#
+example2    = https://example.org/%s                    | example↗
+example3    = https://example.org/%s                    | example:
