--- a/Documentation/Settings.cfg
+++ b/Documentation/Settings.cfg
@@ -31,6 +31,26 @@ version   = main
 
 plantuml_latex_output_format = eps
 
+graphviz_dot_args = [
+    "-Gcolor=None",
+    "-Gfillcolor=None",
+    "-Gfontname=None",
+    "-Gfontsize=None",
+    "-Gfontcolor=None",
+    "-Nstyle=filledfilled",
+    "-Ncolor=#A80036",
+    "-Nfillcolor=#FEFECE",
+    "-Nfontname=sans-serif",
+    "-Nfontsize=10.0",
+    "-Nfontcolor=#333333",
+    "-Ecolor=#F49700",
+    "-Efontname=sans-serif",
+    "-Efontsize=9.0",
+    "-Efontcolor=#333333",
+    "-Einvented=invented",
+  ]
+
+
 
 # mathjax_path = https://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML
 
@@ -76,6 +96,10 @@ project_repository   = https://github.com/TYPO3-Documentation/sphinx_typo3_theme
 # Opensearch code is currently disabled
 use_opensearch =
 
+# for en_US: leave empty
+t3docs_locale =
+# t3docs_locale = de_DE
+# t3docs_locale = fr_FR
 
 # Edit on GitHub button
 edit_github = 1
@@ -103,7 +127,7 @@ github_branch        =
 github_commit_hash   = ((was never implemented))
 github_repository    =
 github_revision_msg  = ((was never implemented))
-github_sphinx_locale = ((was never implemented))
+github_sphinx_locale =
 
 
 [intersphinx-mapping]
@@ -160,3 +184,4 @@ theme-issue = https://github.com/TYPO3-Documentation/sphinx_typo3_theme/issues/%
 example1    = https://example.org/%s                    | example#
 example2    = https://example.org/%s                    | example↗
 example3    = https://example.org/%s                    | example:
+
