Add page add_object_type AddObjectType

--- a/Documentation/Settings.cfg
+++ b/Documentation/Settings.cfg
@@ -185,3 +185,14 @@ example1    = https://example.org/%s                    | example#
 example2    = https://example.org/%s                    | example↗
 example3    = https://example.org/%s                    | example:
 
+
+[sphinx_object_types_to_add]
+
+# DIRECTIVE_NAME =  DIRECTIVE_NAME // TEXTROLE_NAME // OBJECT_NAME
+# Each line is used for a call of the Sphinx API function 'app.add_object_type()'
+# and creates a Sphinx directive, a Sphinx textrole and a group of index entries.
+# See: https://www.sphinx-doc.org/en/master/extdev/appapi.html#sphinx.application.Sphinx.add_object_type
+cvtca       =  cvtca        //  cvtca        //  TCA configuration value
+cvtcainline =  cvtcainline  //  cvtcainline  //  TCA 'inline' configuration value
+cvtcainput  =  cvtcainput   //  cvtcainput   //  TCA 'input' configuration value
+
