--- a/Documentation/Settings.cfg
+++ b/Documentation/Settings.cfg
@@ -152,7 +152,7 @@ github_sphinx_locale =
 # t3templating   = https://docs.typo3.org/m/typo3/tutorial-templating/main/en-us/
 # t3ts45         = https://docs.typo3.org/m/typo3/tutorial-typoscript-in-45-minutes/main/en-us/
 # t3tsconfig     = https://docs.typo3.org/m/typo3/reference-tsconfig/main/en-us/
-# t3tsref        = https://docs.typo3.org/m/typo3/reference-typoscript/main/en-us/
+t3tsref        = https://docs.typo3.org/m/typo3/reference-typoscript/main/en-us/
 # t3vhref        = https://docs.typo3.org/other/typo3/view-helper-reference/main/en-us/
 
 # system extensions
