Switch to new Edit button configuration of DRC >=v3.0.dev20

--- a/Documentation/Settings.cfg
+++ b/Documentation/Settings.cfg
@@ -101,33 +101,9 @@ t3docs_locale =
 # t3docs_locale = de_DE
 # t3docs_locale = fr_FR
 
-# Edit on GitHub button
-edit_github = 1
-github_host = github.com
-github_user = TYPO3-Documentation
-github_repo = sphinx_typo3_theme_rendering_test
-github_version = master
-
-# Edit on BitBucket button
-edit_bitbucket =
-bitbucket_host = bitbucket.org
-bitbucket_user =
-bitbucket_repo =
-bitbucket_version =
-
-# Edit on GitLab button
-edit_gitlab =
-gitlab_host = gitlab.com
-gitlab_user =
-gitlab_repo =
-gitlab_version =
-
-# DEPRECATED settings - don't use these any more
-github_branch        =
-github_commit_hash   = ((was never implemented))
-github_repository    =
-github_revision_msg  = ((was never implemented))
-github_sphinx_locale =
+# Turn on the "Edit on …" button
+repository_url = https://github.com/TYPO3-Documentation/sphinx_typo3_theme_rendering_test
+repository_branch = master
 
 
 [intersphinx-mapping]
