--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -121,6 +121,6 @@ jobs:
       - name: Publish
         uses: JamesIves/github-pages-deploy-action@releases/v3
         with:
-          GITHUB_TOKEN: ${{ secrets.T3DOCS_REPOS_FULL }}
+          GITHUB_TOKEN: ${{ secrets.GITHUBREPOACCESS }}
           BRANCH: gh-pages
           FOLDER: site
